@@ -32,6 +32,9 @@ def main(args):
     if args.i is None and args.d is None:
         print '-i OR -d must be selected\n'
         sys.exit(1)
+    if args.i is not None and args.m is None:
+        print '-i must be used with -m'
+        sys.exit(1)
     
 
     ## Notate the driver in use
